Fixed bugs and improved alignments for better design and responsiveness

--- a/pages/style/style.css
+++ b/pages/style/style.css
@@ -39,7 +39,7 @@ p {
 }
 
 .btn-position {
-  top: 10px;
+  top: 10px ;
   left: 10px;
 }
 
@@ -57,4 +57,9 @@ p {
 
 .cards-bg-img-3 {
   background-image: url(/imgs/cherry-img.png);
+}
+
+.card:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
